Ajuste de notificações

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <script src="js/index.js"></script>
 </head>
 <body>
-    <h1>Notificador</h1>
+    <h1>Notificador Cordova</h1>
     <button onclick="enviarNotificacao('Notificação manual')">Enviar Notificação</button>
     <button onclick="dispararAtualizacao()">Disparar Atualização</button>
     <p id="status">Aguardando atualizações...</p>
