--- a/www/index.html
+++ b/www/index.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Notificador Cordova</title>
-    <!-- cordova.js é injetado pelo Cordova no build final -->
-    <script src="cordova.js"></script>
-    <script src="js/index.js"></script>
-</head>
-<body>
-    <h1>Notificador Cordova</h1>
-
-    <!-- Botão que manda notificação manual apenas com texto e um link genérico -->
-    <button onclick="enviarNotificacao('Notificação manual enviada!', 'pagina.html?msg=manual')">
-        Enviar Notificação
-    </button>
-
-    <!-- Botão para disparar atualização por API -->
-    <button onclick="dispararAtualizacao()">Disparar Atualização</button>
-
-    <p id="status">Aguardando atualizações...</p>
-</body>
+<!-- www/index.html -->  
+<!DOCTYPE html>  
+<html>  
+<head>  
+    <meta charset="UTF-8">  
+    <title>Notificador Cordova</title>  
+    <!-- cordova.js é injetado pelo Cordova no build final -->  
+    <script src="cordova.js"></script>  
+    <script src="js/index.js"></script>  
+</head>  
+<body>  
+    <h1>Notificador Cordova</h1>  
+  
+    <!-- Botão que manda notificação manual apenas com texto e um link genérico -->  
+    <button onclick="enviarNotificacao('Notificação manual enviada!', 'pagina.html?msg=manual')">  
+        Enviar Notificação  
+    </button>  
+  
+    <!-- Botão para disparar atualização por API -->  
+    <button onclick="dispararAtualizacao()">Disparar Atualização</button>  
+  
+    <p id="status">Aguardando atualizações...</p>  
+</body>  
 </html>
